--- a/node/package.json
+++ b/node/package.json
@@ -1,16 +1,11 @@
 {
-  "name": "app",
+  "name": "node",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Desafio SonarCloud",
+  "main": "sum.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "Gabriel Cayres",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.17.1",
-    "mysql": "^2.18.1",
-    "test": "^0.6.0"
-  }
+  "license": "ISC"
 }
