--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,14 +17,15 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Node.js CI
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
       - run: npm install
       - run: npm ci
       - run: npm run build --if-present
-      - run: npm run test
+      - name: Run Jest
+        uses: stefanoeb/jest-action@1.0.3
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
         env:
