--- a/node/package.json
+++ b/node/package.json
@@ -4,7 +4,8 @@
   "description": "Desafio SonarCloud",
   "main": "sum.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "start": "sum.js"
   },
   "author": "Gabriel Cayres",
   "license": "ISC"
