--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,7 +17,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: Node.js CI
+      - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
@@ -25,7 +25,8 @@ jobs:
       - run: npm ci
       - run: npm run build --if-present
       - name: Run Jest
-        uses: stefanoeb/jest-action@1.0.3
+        - run: yarn install
+        - run: yarn test
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
         env:
