--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -24,7 +24,7 @@ jobs:
       - run: npm install
       - run: npm ci
       - run: npm run build --if-present
-      - run: yarn install
+      - run: yarn
       - run: yarn test
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
