--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,7 +25,7 @@ jobs:
       - run: npm ci
       - run: npm run build --if-present
       - run: yarn
-      - run: yarn test
+      - run: yarn run test
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
         env:
