--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -24,8 +24,7 @@ jobs:
       - run: npm install
       - run: npm ci
       - run: npm run build --if-present
-      - run: yarn
-      - run: yarn run test
+      - run: npm test
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
         env:
