fix: package.json - Yarn test

--- a/node/package.json
+++ b/node/package.json
@@ -4,10 +4,7 @@
   "description": "Desafio SonarCloud",
   "main": "sum.js",
   "scripts": {
-    "build": "ncc build -o dist/setup src/setup-node.ts && ncc build -o dist/cache-save src/cache-save.ts",
-    "format": "prettier --write **/*.ts",
-    "test": "jest",
-    "pre-checkin": "npm run format && npm run build && npm test",
+    "test": "jest --coverage",
     "start": "node sum.js"  
   },
   "author": "Gabriel Cayres",
