--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,30 +1,38 @@
-name: Node.js CI
-
+name: Tests CI
 on:
   push:
     branches: [ develop ] #Após problemas, alterado de main para develop (23/09/2021)
   pull_request:
     branches: [ develop ] #Após problemas, alterado de main para develop
-
 jobs:
-  build:
-
+  test:
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [15.x]
-
     steps:
       - uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Test using Node.js
         uses: actions/setup-node@v1
         with:
-          node-version: ${{ matrix.node-version }}
-      - run: npm install 
-      - run: npm ci
-      - run: npm run build --if-present
-      - run: npm test
+          node-version: '12'
+      - run: yarn install
+      - run: yarn test:ci
+      - name: Tests ✅
+        if: ${{ success() }}
+        run: |
+          curl --request POST           --url https://api.github.com/repos/${{ github.repository }}/statuses/${{ github.sha }}           --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}'           --header 'content-type: application/json'           --data '{
+            "context": "tests",
+            "state": "success",
+            "description": "Tests passed",
+            "target_url": "https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}"
+          }'
+      - name: Tests 🚨
+        if: ${{ failure() }}
+        run: |
+          curl --request POST           --url https://api.github.com/repos/${{ github.repository }}/statuses/${{ github.sha }}           --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}'           --header 'content-type: application/json'           --data '{
+            "context": "tests",
+            "state": "failure",
+            "description": "Tests failed",
+            "target_url": "https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}"
+          }'
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
         env:
