fix: package.json - Yarn test

--- a/node/package.json
+++ b/node/package.json
@@ -4,6 +4,7 @@
   "description": "Desafio SonarCloud",
   "main": "sum.js",
   "scripts": {
+    "build": "babel src -d lib",
     "test": "jest --coverage",
     "start": "node sum.js"
   },
