--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,38 +1,30 @@
-name: Tests CI
+name: Node.js CI
+
 on:
   push:
     branches: [ develop ] #Após problemas, alterado de main para develop (23/09/2021)
   pull_request:
     branches: [ develop ] #Após problemas, alterado de main para develop
+
 jobs:
-  test:
+  build:
+
     runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [15.x]
+
     steps:
       - uses: actions/checkout@v2
-      - name: Test using Node.js
+      - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
-          node-version: '15'
-      - run: yarn install
-      - run: yarn test:ci
-      - name: Tests ✅
-        if: ${{ success() }}
-        run: |
-          curl --request POST           --url https://api.github.com/repos/${{ github.repository }}/statuses/${{ github.sha }}           --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}'           --header 'content-type: application/json'           --data '{
-            "context": "tests",
-            "state": "success",
-            "description": "Tests passed",
-            "target_url": "https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}"
-          }'
-      - name: Tests 🚨
-        if: ${{ failure() }}
-        run: |
-          curl --request POST           --url https://api.github.com/repos/${{ github.repository }}/statuses/${{ github.sha }}           --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}'           --header 'content-type: application/json'           --data '{
-            "context": "tests",
-            "state": "failure",
-            "description": "Tests failed",
-            "target_url": "https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}"
-          }'
+          node-version: ${{ matrix.node-version }}
+      - run: npm install 
+      - run: npm ci
+      - run: npm run build --if-present
+      - run: npm test
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
         env:
