--- a/node/package.json
+++ b/node/package.json
@@ -13,6 +13,7 @@
   "keywords": [],
   "dependencies": {
     "@actions/core": "^1.5.0",
-    "@actions/github": "^5.0.0"
+    "@actions/github": "^5.0.0",
+    "jest": "^27.2.1"
   }
 }
