--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,7 +23,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: npm install 
       - run: npm ci
-      #- run: npm run test
+      - run: npm run test
       - run: npm run build --if-present
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
