--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "keywords": [],
   "dependencies": {
     "@actions/core": "^1.5.0",
-    "@actions/github": "^5.0.0"
+    "@actions/github": "^5.0.0",
+    "babel": "^6.23.0"
   },
   "devDependencies": {
     "jest": "^27.2.1"
